[package]
authors = ["Mark LeMoine <linclelinkpart5@gmail.com>"]
edition = "2021"
name = "cursive-test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.20", default-features = false, features = [
    "termion-backend",
] }
rand = "*"
